1.2.5 to 1.2.6
----------------------------------------------------------------------
- When choosing to select SNMP data collection for a node, once the
  changes are applied the web page will go back to the node instead
  of the main Admin page. This improves performance on large systems.
- Fixed an issue where interfaces marked for collection were getting
  set to "N" on a rescan.
- Upgraded MX4J to 3.0.1 (the same version in head) to fix bug #1330.
- Added asset info to the node page and some SNMP-Informant collections.
- Changed OpenNMS so that manage/unmange interfaces deletes active
  outages and does not require a reboot when unmanaging a service.
- Fixed an issue with the Scheduled Outages GUI and Java 5.
- Fixed an issue with data collection when the primary interface is
  on a NIC with other virtual IPs.
- Merged Calendar format reports from 1.3 line.

1.2.4 to 1.2.5
----------------------------------------------------------------------
- Made changes to SNMP data collection to improve both speed and
  startup time.
- Corrected a deadlock condition to fix getConnection hangs and 
  outage resolution issues.
- Added group duty schedules. Bug 1147. Thx Bill
- Updated Novell Events.
- Added Netscreen Events.
- Added AirDefense events and updated Symbol events.
- Removed the first two varbinds from an SNMP v2 Trap. Bug 733
- Fixed a number of documentation mistakes pointed out by Austin Tuan.
  Thank you very much, Austin!  Bug 1303.
- Fixes to build.xml to make it easier to specify compiler options for
  explicitly setting the target architecture for the JNI code and the
  PostgreSQL module (build.jni.compiler.arg and build.postgresql.compiler.arg,
  respectively).  Thanks to Jonathan Sartin who submitted a patch.  Bug 1331.
- Fix for building on FreeBSD.  Should now be able to do it by creating
  a build.properties file (see the release notes for details).  Thanks
  to Dennis Berger and Brent Verner for supplying patches.  Bug 1315.